--- a/help/src/hid00001.htm
+++ b/help/src/hid00001.htm
@@ -15,14 +15,14 @@
     <font size="4">2画面ファイラー</font>
     <font size="6">NyanFi</font><br>
     <font size="4">
-      for Windows<br><br><br>Version 16.09 (x64 VCLスタイル版)<br>
+      for Windows<br><br><br>Version 16.10 (x64 VCLスタイル版)<br>
     </font>
   </div>
 
   <h1>概要</h1>
   <p><big>キーボード操作主体の2画面ファイラーです。</big></p>
   <p>
-    そこそこ多機能、ビュアーもなかなか、FTP接続や簡易マクロ、タグ管理、Git連携機能なども実装。<br>
+    そこそこ多機能、ビューアもなかなか、FTP接続や簡易マクロ、タグ管理、Git連携機能なども実装。<br>
     デザインや操作を細かくカスタマイズできます。VCLスタイルによるライト/ダークモード表示が可能。<br>
   </p>
   <br>
