--- a/help/src/hid00002.htm
+++ b/help/src/hid00002.htm
@@ -88,16 +88,16 @@
     <dt class="no_bg">xd2txlib.dll</dt>
     <dd>
       <b>xd2txlib.dll</b> (xdoc2txt のDLL版 ver2.x hishida氏作 ebstudio.info/home/xdoc2txt.html)に対応しています。<br>
-      PDF、WORD、EXCEL、一太郎などの各種バイナリ文書に対して、テキストビュアー表示、文字列検索(GREP)、ファイル名検索での文字列検索が可能になります。<br>
+      PDF、WORD、EXCEL、一太郎などの各種バイナリ文書に対して、テキストビューア表示、文字列検索(GREP)、ファイル名検索での文字列検索が可能になります。<br>
     </dd>
 
     <dt class="no_bg">hhh.exe</dt>
     <dd>
-      テキストビュアーの <a href="hid00006.htm#HelpCurWord">HelpCurWord</a> コマンドで、カーソル位置の単語を指定したヘルプで検索するには、<b>hhh.exe</b> (saitou155 氏作)が必要です。あらかじめ、パスの通ったディレクトリ(hh.exe がある C:\Windows など)にインストールしておいてください。
+      テキストビューアの <a href="hid00006.htm#HelpCurWord">HelpCurWord</a> コマンドで、カーソル位置の単語を指定したヘルプで検索するには、<b>hhh.exe</b> (saitou155 氏作)が必要です。あらかじめ、パスの通ったディレクトリ(hh.exe がある C:\Windows など)にインストールしておいてください。
     </dd>
     
     <dt class="no_bg"><b>git.exe (Git for Windows)</b></dt>
-    <dd>リポジトリに関する情報を表示したり、<b>NyanFi</b> から git コマンドを利用したりできます。またGitビュアーも実装。<br>
+    <dd>リポジトリに関する情報を表示したり、<b>NyanFi</b> から git コマンドを利用したりできます。またGitビューアも実装。<br>
       git.exe が標準的な場所にインストールされている場合は自動的に検出されますが、そうでない場合は <a href="hid00024.htm#Other">オプション設定 - 一般2 - その他</a>
       で設定してください。<br>
       詳しくは、<a href="hid00090.htm">Git の利用について</a> を参照してください。
