--- a/help/src/hid00008.htm
+++ b/help/src/hid00008.htm
@@ -54,11 +54,11 @@
       <td></td>
     </tr>
     <tr>
-      <td><a href="hid00011.htm">テキストビュアー</a></td>
+      <td><a href="hid00011.htm">テキストビューア</a></td>
       <td></td>
     </tr>
     <tr>
-      <td><a href="hid00020.htm">イメージビュアー</a></td>
+      <td><a href="hid00020.htm">イメージビューア</a></td>
       <td></td>
     </tr>
     <tr>
