--- a/help/src/hid00009.htm
+++ b/help/src/hid00009.htm
@@ -104,7 +104,7 @@
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> ダイアログをメイン画面の中央に表示</dt>
-    <dd>各種ダイアログを <b>NyanFi</b> メイン画面の中央に表示します(テキストビュアーの文字情報とインスペクタは除く)。手動で表示位置を移動しても、再度開いたときには画面中央になります。<br>
+    <dd>各種ダイアログを <b>NyanFi</b> メイン画面の中央に表示します(テキストビューアの文字情報とインスペクタは除く)。手動で表示位置を移動しても、再度開いたときには画面中央になります。<br>
       なお、メイン画面が表示されているモニタからダイアログがはみ出した場合は、モニタ内に収まるようにダイアログ位置が調整されます。
       <div class="info_text">
         元々はマルチディスプレイ環境対策のために追加したオプションですが、現在では、二重起動された <b>NyanFi</b> でダイアログを開いた場合、メインの <b>NyanFi</b>
