--- a/help/src/hid00010.htm
+++ b/help/src/hid00010.htm
@@ -191,7 +191,7 @@
       <b>最小列幅</b> <img src="edit.png" alt="">
       で表示幅の最小値を指定できます。結果リストの幅が反対側のリスト幅よりも大きい場合、左右差の1/4が列幅に加算されます(名前とタグの幅を拡大)。<br>
       <img src="chkbox.png" alt=""> <b>並びをソート</b>
-      をチェックすると、複数のタグの並びをソートして表示します。チェックしないと、設定されている順番で表示されます。この設定は、ファイル情報やイメージビュアーのサムネイルにタグを表示する際にも適用されます。<br>
+      をチェックすると、複数のタグの並びをソートして表示します。チェックしないと、設定されている順番で表示されます。この設定は、ファイル情報やイメージビューアのサムネイルにタグを表示する際にも適用されます。<br>
       <br>
     </dd>
 
@@ -323,7 +323,7 @@
       <b>時計パネル</b> <img src="edit.png" alt="">
       <div class="indent1">
         ここに書式を設定すると、ステータスバー右端に時計パネルが表示されます。空欄にするとパネルが非表示になります。<br>
-        ステータスバーが非表示で、画面レイアウトが「ファイルリストが左/右」の場合、ログウィンドウの下に時計パネルが表示されます。またイメージビュアーでサイドバーが表示されている場合、サイドバーの下端に表示されます。<br>
+        ステータスバーが非表示で、画面レイアウトが「ファイルリストが左/右」の場合、ログウィンドウの下に時計パネルが表示されます。またイメージビューアでサイドバーが表示されている場合、サイドバーの下端に表示されます。<br>
         <br>
         日付や時刻には以下の指定子が使えます。<br>
         　<b>yyyy</b> 年(4桁)、<b>yy</b> 年(2桁)、<b>mm</b> 月、<b>dd</b> 日、<b>ddd</b> 曜日、<b>dddd</b> 曜日(完全名)、<b>hh</b>
@@ -427,14 +427,14 @@
     <dt class="no_bg_indent1" id="ScrollBar">スクロールバー <img src="combobox.png" alt="">　<span class="def_text">(デフォルト:
         標準)</span></dt>
     <dd>コンボボックスで「<b>シンプル</b>」、「<b>シンプル(3/4幅)</b>」、「<b>シンプル(1/2幅)</b>」、「<b>シンプル(画像)</b>」のいずれかを選ぶと、配色指定可能なリスト、一覧、ダイアログ(<a
-        href="hid00081.htm">XMLビュアー</a>は除く)のスクロールバーが独自のものに変わります。<br>
+        href="hid00081.htm">XMLビューア</a>は除く)のスクロールバーが独自のものに変わります。<br>
       このシンプルスクロールバーは、スクロールノブだけからなり、<a href="hid00023.htm#Color">オプション設定 - フォント・配色</a>
       で「<b>シンプルスクロールバーの背景色</b>」、「<b>シンプルスクロールノブの色</b>」、「<b>シンプルスクロールノブの輪郭色</b>」を指定できます。この場合、「～<b>ノブの輪郭色</b>」を「<b>無効</b>」にすると、単純な長方形でノブが描かれます。<br>
       また「<b>シンプル(画像)</b>」を選ぶと、ノブの画像をダイアログで指定できます。スクロールバーの幅は、指定画像の幅 + 2px(余裕)
       か標準幅のうち小さい方になり、ノブの表示領域に画像がストレッチ表示されます。<b>PNG</b>
       画像ではアルファチャンネルに対応しており、「～<b>ノブの色</b>」の上に重ねられます。「～<b>ノブの輪郭色</b>」は無視されます。水平スクロールバーでは、指定画像を回転(90°+左右反転)してストレッチ表示します。<br>
       <div class="spc_box">
-        シンプルスクロールバーを利用している場合、ファイラーで<a href="hid00050.htm">インクリメンタルサーチ</a>を行ったり、<a href="hid00006.htm">テキストビュアー</a>/<a
+        シンプルスクロールバーを利用している場合、ファイラーで<a href="hid00050.htm">インクリメンタルサーチ</a>を行ったり、<a href="hid00006.htm">テキストビューア</a>/<a
           href="hid00073.htm">一覧ダイアログ</a>で文字列検索を行ったりすると、ヒット位置を示す半透明の横線がスクロールバー上に表示されます。表示色は「<b>シンプルスクロールバーのヒット位置</b>」で指定できます(無効にすると非表示)。<br>
         また「<b>シンプルスクロールバーの選択位置(FL)</b>」を設定していると、ファイラーで項目を選択している場合、選択位置を示す半透明の横線がスクロールバー上に表示されます。<br>
         なおノブのサイズは全体に対する1ページ分の割合になりますが、最小サイズの制限があるため、ノブ上にヒット/選択表示があっても現在のページ範囲から外れている場合があります。<br>
