--- a/help/src/hid00022.htm
+++ b/help/src/hid00022.htm
@@ -8,10 +8,10 @@
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
     <param name="Keyword" value="X1ボタン">
     <param name="Keyword" value="X2ボタン">
-    <param name="Keyword" value="イメージビュアー">
+    <param name="Keyword" value="イメージビューア">
     <param name="Keyword" value="コマンド名の参照">
     <param name="Keyword" value="ダブルクリック">
-    <param name="Keyword" value="テキストビュアー">
+    <param name="Keyword" value="テキストビューア">
     <param name="Keyword" value="ドロップ">
     <param name="Keyword" value="ファイラー">
     <param name="Keyword" value="ホイール">
@@ -89,7 +89,7 @@
       なお、右クリックメニューで「<b>コマンド名の参照</b>」が可能です(<a href="hid00005.htm#CopyCmdName">→ CopyCmdName</a>)。<br>
       <br><br>
     </dd>
-    <dt><img src="grpbox.png" alt=""> テキストビュアー</dt>
+    <dt><img src="grpbox.png" alt=""> テキストビューア</dt>
     <dt class="no_bg_indent1">マウスホイール <img src="combobox.png" alt="">　<span class="def_text">(デフォルト:
         ScrollUp/ScrollDown、Ctrl+ ZoomIn/ZoomOut、Shift+ PageUp/PageDown)</span></dt>
     <dd>マウスホイールを回転したときに実行するコマンドを設定します。<span class="btn_frame">Ctrl</span>、<span
@@ -114,7 +114,7 @@
       <br><br>
     </dd>
 
-    <dt><img src="grpbox.png" alt=""> イメージビュアー</dt>
+    <dt><img src="grpbox.png" alt=""> イメージビューア</dt>
     <dt class="no_bg_indent1">マウスホイール <img src="combobox.png" alt="">　<span class="def_text">(デフォルト:
         PrevFile/NextFile、Ctrl+ ZoomIn/ZoomOut、Shift+ ScrollUp/ScrollDown、Ctrl+Shift+ ScrollLeft/ScrollRight)</span>
     </dt>
