--- a/help/src/hid00055.htm
+++ b/help/src/hid00055.htm
@@ -25,8 +25,8 @@
   <h1>キー割り当て一覧</h1>
   <p>
     <a href="hid00005.htm#KeyList">KeyList</a> コマンドを実行するとこのダイアログが開きます。<br>
-    <b>ファイラー</b>、<a href="hid00050.htm">INC.(インクリメンタル)サーチ</a>、<a href="hid00006.htm">テキストビュアー</a>、<a
-      href="hid00007.htm">イメージビュアー</a>、<b>ログウィンドウ</b>のそれぞれについて、割り当てられているキーの一覧を表示します。また、選択している項目のコマンドを、<span
+    <b>ファイラー</b>、<a href="hid00050.htm">INC.(インクリメンタル)サーチ</a>、<a href="hid00006.htm">テキストビューア</a>、<a
+      href="hid00007.htm">イメージビューア</a>、<b>ログウィンドウ</b>のそれぞれについて、割り当てられているキーの一覧を表示します。また、選択している項目のコマンドを、<span
       class="btn_frame">ENTER</span>キーまたはダブルクリックで実行できます。
   </p>
 
