--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -47,7 +47,7 @@
       ファイラーで割り当てられているのと同じキーで、カーソル移動や、ファイルの閲覧(<a href="hid00005.htm#TextViewer">TextViewer</a> /
       <b>TextViewer</b>_XW)、編集(<a href="hid00005.htm#FileEdit">FileEdit</a>)が行えます。また <a
         href="hid00005.htm#OpenByApp">OpenByApp</a>、<a href="hid00005.htm#OpenByWin">OpenByWin</a> コマンドも実行できます。<br>
-      <b>TextViewer</b>_XW で別ウィンドウのテキストビュアーを開いている場合、<span class="btn_frame">TAB</span>キーで結果リストとの間を行き来できます。<br>
+      <b>TextViewer</b>_XW で別ウィンドウのテキストビューアを開いている場合、<span class="btn_frame">TAB</span>キーで結果リストとの間を行き来できます。<br>
       <a href="hid00012.htm">オプション設定 - エディタ</a> - テキストエディタ
       の「<b>パラメータ(GREP用)</b>」を設定しておけば、エディタで開いてその行位置に移動(タグジャンプ)できます。バイナリ文書では対応するエディタで開きます。<br>
       また<span class="btn_frame">ENTER</span>キーを押すと、結果リストから抜けて、そのファイルのある位置に移動します。<br>
@@ -78,7 +78,7 @@
     <dt class="no_bg">フォーカス移動など</dt>
     <dd>
       結果リストにフォーカスがある場合、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">F</span>キーでフィルタ欄に、<span
-        class="btn_frame">Ctrl</span>+<span class="btn_frame">S</span>キーで検索文字列欄に移れます。また、別ウィンドウのテキストビュアーがなければ、<span
+        class="btn_frame">Ctrl</span>+<span class="btn_frame">S</span>キーで検索文字列欄に移れます。また、別ウィンドウのテキストビューアがなければ、<span
         class="btn_frame">TAB</span>キーでも移れます。<br>
       フィルタ欄からは、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">L</span>で結果リストに、<span
         class="btn_frame">Ctrl</span>+<span class="btn_frame">F</span>(or <span class="btn_frame">Ctrl</span>+<span
