--- a/help/src/hid00058.htm
+++ b/help/src/hid00058.htm
@@ -44,7 +44,7 @@
     <span class="btn_frame">すべて表示</span>が有効だと履歴にあるすべてのファイルが、<span
       class="btn_frame">カレント以下</span>ではカレントおよびそのサブディレクトリにあるファイルが、<span
       class="btn_frame">カレントのみ</span>ではカレントにあるファイルのみが表示されます。なお、<a
-      href="hid00006.htm">テキストビュアー</a>から一覧を開いた場合は、閲覧中ファイルのディレクトリが基準となります。
+      href="hid00006.htm">テキストビューア</a>から一覧を開いた場合は、閲覧中ファイルのディレクトリが基準となります。
   </p>
 
   <dl>
@@ -52,11 +52,11 @@
     <dd>
       <span class="btn_frame">1</span>～<span class="btn_frame">9</span>、<span
         class="btn_frame">0</span>キーを押した場合、<b>最近編集したファイル一覧</b>ではそのファイルがテキストエディタで開かれ、<b>最近閲覧したファイル一覧</b>では<a
-        href="hid00006.htm">テキストビュアー</a>で開かれます。<br>
+        href="hid00006.htm">テキストビューア</a>で開かれます。<br>
 
       <div class="spc_box">
         また、ファイラーで <b>FileEdit</b> コマンドが割り当てられているキーでは、カーソル位置のファイルがテキストエディタで開かれ、<b>TextViewer</b> コマンドが割り当てられているキーでは<a
-          href="hid00006.htm">テキストビュアー</a>で開かれます。<span
+          href="hid00006.htm">テキストビューア</a>で開かれます。<span
           class="btn_frame">ENTER</span>キーを押した場合は、ファイラー画面に戻り、そのファイルのある位置に移動します。<br>
       </div>
 
