--- a/help/src/hid00060.htm
+++ b/help/src/hid00060.htm
@@ -38,7 +38,7 @@
     <dd>
       ファイラーで <a href="hid00005.htm#WorkList">WorkList</a> コマンドを実行すると、カレント側にワークリストが表示されます。<br>
       また、ワークリスト・ファイル(<b>.nwl</b>)上で<span class="btn_frame">ENTER</span>キーを押すと、それが読み込まれてワークリスト表示になります。<br>
-      <a href="hid00007.htm">イメージビュアー</a>では、<b>WorkList</b> コマンドで、ワークリストの画像ファイルなどを表示できます。
+      <a href="hid00007.htm">イメージビューア</a>では、<b>WorkList</b> コマンドで、ワークリストの画像ファイルなどを表示できます。
       <div class="spc_box">
         通常のファイルリスト表示に戻るには、<b>WorkList</b> コマンドを再び実行するか、<a href="hid00005.htm#ReturnList">ReturnList</a>
         コマンドを実行してください。<br>
