--- a/help/src/hid00066.htm
+++ b/help/src/hid00066.htm
@@ -13,7 +13,7 @@
 	<param name="Keyword" value="SetUserDefStr">
 	<param name="Keyword" value="UserDefList">
 	<param name="Keyword" value="あいまい検索">
-	<param name="Keyword" value="テキストビュアー">
+	<param name="Keyword" value="テキストビューア">
 	<param name="Keyword" value="フィルタ">
 	<param name="Keyword" value="マーク行一覧">
 	<param name="Keyword" value="マウスホイール">
@@ -28,7 +28,7 @@
 
   <h1>関数一覧／ユーザ定義文字列一覧／マーク行一覧</h1>
   <p>
-    <a href="hid00006.htm">テキストビュアー</a>でテキスト表示の場合、<a href="hid00006.htm#FunctionList">FunctionList</a>
+    <a href="hid00006.htm">テキストビューア</a>でテキスト表示の場合、<a href="hid00006.htm#FunctionList">FunctionList</a>
     コマンドを実行すると<b>関数一覧</b>が、<a href="hid00006.htm#UserDefList">UserDefList</a> コマンドでは<b>ユーザ定義文字列一覧</b>が、また<a
       href="hid00006.htm#MarkList">MarkList</a> コマンドでは<b>マーク行一覧</b>が開きます。<br>
     これらの一覧は画面を共用しているので、表示位置やサイズは同じになります。
@@ -37,11 +37,11 @@
   <dl>
     <dt class="no_bg">一覧でのキー操作</dt>
     <dd>
-      カーソル移動などは、ファイラーやテキストビュアーで割り当てられているのと同じキー操作や、テキストビュアーで割り当てられているマウスホイール操作によってできます(CursorDown/Up/Top/End、TextTop/End(TV)、PageDown/Up、ScrollDown/Up、ScrollCursorDown/Up(TV)、SelAll～、SelectAll(TV)、SelectAll(TV)、ZoomIn/Out/Reset、SetFontSize、Close(TV)
+      カーソル移動などは、ファイラーやテキストビューアで割り当てられているのと同じキー操作や、テキストビューアで割り当てられているマウスホイール操作によってできます(CursorDown/Up/Top/End、TextTop/End(TV)、PageDown/Up、ScrollDown/Up、ScrollCursorDown/Up(TV)、SelAll～、SelectAll(TV)、SelectAll(TV)、ZoomIn/Out/Reset、SetFontSize、Close(TV)
       コマンドに対応)。<br>
       また <a href="hid00006.htm#FileEdit">FileEdit</a>
       コマンドが割り当てられているキーによって、現在のファイルのカーソル行をテキストエディタで開けます(フォーカス位置にかかわらず<span class="btn_frame">Alt</span>+<span
-        class="btn_frame">E</span>キーでも可能)。また、テキストビュアーで <a href="hid00006.htm#FunctionList">FunctionList</a>、<a
+        class="btn_frame">E</span>キーでも可能)。また、テキストビューアで <a href="hid00006.htm#FunctionList">FunctionList</a>、<a
         href="hid00006.htm#UserDefList">UserDefList</a>、<a href="hid00006.htm#MarkList">MarkList</a>
       コマンドが割り当てられているキーによって、それぞれの一覧に切り替えられます。<br>
       <b>関数一覧</b>、<b>ユーザ定義文字列一覧</b>では、<a href="hid00006.htm#Mark">Mark</a> コマンドが割り当てられているキーで行マーク/解除が可能です。<br>
@@ -54,7 +54,7 @@
       <b>フィルタ</b>覧に文字列を入力すると、それが含まれている項目だけが絞り込み表示されます。関数一覧ではあいまい検索も可能です(<a href="hid00006.htm#FunctionList">FunctionList</a>_FZ)。<br>
       <img src="chkbox.png" alt=""> <b>Migemo</b> をチェックしていると、<b>Migemo</b> モードで絞り込みを行えます。モード切り替えは、フィルタ欄で <span
         class="btn_frame">Ctrl</span>+<span class="btn_frame">M</span>キーでも可能です。<br>
-      <img src="chkbox.png" alt=""> <b>連動</b> をチェックしていると、ビュアーのカーソル行が一覧の選択項目と連動します。<br>
+      <img src="chkbox.png" alt=""> <b>連動</b> をチェックしていると、ビューアのカーソル行が一覧の選択項目と連動します。<br>
       <br>
 
       フィルタ覧にフォーカスがある場合でも、<span class="btn_frame">↑</span>(or <span class="btn_frame">Ctrl</span>+<span
@@ -95,7 +95,7 @@
       <a href="hid00006.htm#SetUserDefStr">SetUserDefStr</a> コマンドで、文字列を事前に設定しておくことも可能です。一覧を開くと、この設定はクリアされます。<br>
       事前設定していない場合は、前回使用した文字列が用いられます。<br>
       <span
-        class="btn_frame">見出し登録</span>を押すと、現在のユーザ定義文字列(正規表現)が、ファイルの拡張子に対する見出しパターンとして登録され、ビュアーの強調表示に用いられます(HTML文書などは除く)。<br>
+        class="btn_frame">見出し登録</span>を押すと、現在のユーザ定義文字列(正規表現)が、ファイルの拡張子に対する見出しパターンとして登録され、ビューアの強調表示に用いられます(HTML文書などは除く)。<br>
       登録を解除したい場合は、空欄にしてボタンを押してください。<br>
       <br>
     </dd>
