--- a/help/src/hid00068.htm
+++ b/help/src/hid00068.htm
@@ -22,8 +22,8 @@
 
   <h1>ツールバーの設定ダイアログ</h1>
   <p>
-    <b>ファイラー</b>、<a href="hid00006.htm">テキストビュアー</a>、<a
-      href="hid00007.htm">イメージビュアー</a>でそれぞれの<b>ツールバー</b>をダブルクリックするか、<b>設定メニュー</b> - 「<b>ツールバーの設定</b>」を選択、あるいは <a
+    <b>ファイラー</b>、<a href="hid00006.htm">テキストビューア</a>、<a
+      href="hid00007.htm">イメージビューア</a>でそれぞれの<b>ツールバー</b>をダブルクリックするか、<b>設定メニュー</b> - 「<b>ツールバーの設定</b>」を選択、あるいは <a
       href="hid00005.htm#ToolBarDlg">ToolBarDlg</a> コマンドでこのダイアログが表示されます。<br>
   </p>
 
