--- a/help/src/hid00070.htm
+++ b/help/src/hid00070.htm
@@ -29,7 +29,7 @@
 
   <h1>栞マーク一覧</h1>
   <p>
-    ファイラーや<a href="hid00007.htm">イメージビュアー</a>で <a href="hid00005.htm#MarkList">MarkList</a>
+    ファイラーや<a href="hid00007.htm">イメージビューア</a>で <a href="hid00005.htm#MarkList">MarkList</a>
     コマンドを実行すると、<b>栞マーク一覧</b>が開き、<a href="hid00005.htm#Mark">Mark</a> コマンドで栞マークが設定されている項目(アーカイブ内も含む)の一覧が表示されます。<br>
     アーカイブ内項目の場合、「仮想ディレクトリの背景色」で表示されます。<br>
     ファイルリストがアイコン表示になっている場合、栞マーク一覧もアイコン表示になります。<br>
