--- a/help/src/hid00072.htm
+++ b/help/src/hid00072.htm
@@ -40,7 +40,7 @@
   <dl>
     <dt class="no_bg">一覧でのキー操作</dt>
     <dd>
-      一覧でのカーソル移動などは、ファイラーやテキストビュアーで割り当てられているのと同じキー操作や、テキストビュアーで割り当てられているマウスホイール操作によってできます(CursorDown/Up/Top/End、PageDown/Up、ScrollDown/Up、ScrollCursorDown/Up(TV)、SelAll～、SelectAll(TV)、Close(TV)
+      一覧でのカーソル移動などは、ファイラーやテキストビューアで割り当てられているのと同じキー操作や、テキストビューアで割り当てられているマウスホイール操作によってできます(CursorDown/Up/Top/End、PageDown/Up、ScrollDown/Up、ScrollCursorDown/Up(TV)、SelAll～、SelectAll(TV)、Close(TV)
       コマンドに対応)。<br>
       拡張子一覧とファイル一覧との間は、<span class="btn_frame">TAB</span>キーで行き来できます。さらに、拡張子一覧からは、<span
         class="btn_frame">ENTER</span>キーや、ファイラーで <a href="hid00005.htm#ToRight">ToRight</a>
