--- a/help/src/hid00078.htm
+++ b/help/src/hid00078.htm
@@ -85,8 +85,8 @@
       <tr>
         <td valign="top"><b>$HTM2TXT</b></td>
         <td>
-          HTML→テキスト変換した内容(テキストビュアーでの場合とほぼ同じ)<br>
-          　<a href="hid00011.htm#HtmlToText">→ オプション設定 - テキストビュアー -「HTML→テキスト変換」</a><br>
+          HTML→テキスト変換した内容(テキストビューアでの場合とほぼ同じ)<br>
+          　<a href="hid00011.htm#HtmlToText">→ オプション設定 - テキストビューア -「HTML→テキスト変換」</a><br>
           HTML文書でない場合は、ファイルの内容(<b>$TEXT</b> と同じ)になります。<br>
         </td>
       </tr>
