--- a/help/src/hid00082.htm
+++ b/help/src/hid00082.htm
@@ -29,7 +29,7 @@
     <dt class="no_bg">プレビューでのキー操作</dt>
     <dd>
       プレビューにフォーカスがあると、プレビュー側にラインカーソルが表示されます。<br>
-      カーソル移動などは、ファイラーやテキストビュアーで割り当てられているのと同じキー操作で行えます。<br>
+      カーソル移動などは、ファイラーやテキストビューアで割り当てられているのと同じキー操作で行えます。<br>
       対応しているコマンドは、CursorDown/Up/Top/End、TextTop/End(TV)、PageDown/Up、ScrollDown/Up、ScrollCursorDown/Up(TV)、Select、SelAll～、SelectAll(TV)、ClipCopy(TV)、OpenURL(TV)
       です。<br>
       ただし2ストロークキー操作には対応していません。<br>
@@ -45,7 +45,7 @@
     <dt class="no_bg">右クリックメニュー</dt>
     <dd>
       「<b>コピー</b>」、「<b>すべて選択</b>」、「<b>URLを開く</b>」が可能です。<br>
-      また「<b>行番号を表示</b>」させることもできます。その場合、行番号の配色はテキストビュアーと同じになります。<br>
+      また「<b>行番号を表示</b>」させることもできます。その場合、行番号の配色はテキストビューアと同じになります。<br>
 
       <div class="spc_box">
         「<b>文字コード変更</b>」を行うと、そのコードページがファイルの代替データストリームに <a href="hid00102.htm#NyanfiDef">nyanfi.def</a>
