--- a/help/src/hid00085.htm
+++ b/help/src/hid00085.htm
@@ -18,7 +18,7 @@
   <p>
     <a href="hid00005.htm#RegExChecker">RegExChecker</a> コマンドを実行すると、<b>正規表現チェッカー</b>が表示されます。<br>
     また、<a href="hid00052.htm">ファイル名検索</a>、<a href="hid00051.htm#Replace">名前の変更 - 置換</a>、<a
-      href="hid00056.htm">文字列検索(GREP)/文字列置換</a>、テキストビュアー/一覧ダイアログでの<a href="hid00065.htm">文字列検索</a>、<a
+      href="hid00056.htm">文字列検索(GREP)/文字列置換</a>、テキストビューア/一覧ダイアログでの<a href="hid00065.htm">文字列検索</a>、<a
       href="hid00066.htm">ユーザ定義文字列一覧</a>、および<a href="hid00077.htm">振り分け</a>において、正規表現を使える入力欄の右クリックメニューからも利用できます。<br>
       なお、<b>NyanFi</b> で利用できる正規表現は Perl-Compatible です。
   </p>
@@ -32,7 +32,7 @@
   </p>
 
   <p class="info_text">
-    <b>パターン</b>欄の下には、入力内容の構文構造を表すカラーバーがあります。色は、テキストビュアーの配色を基に調整しています。
+    <b>パターン</b>欄の下には、入力内容の構文構造を表すカラーバーがあります。色は、テキストビューアの配色を基に調整しています。
   </p>
 
   <p>
@@ -67,7 +67,7 @@
 
   <p>
     検索対象と結果リストの高さ配分や、右側一覧の幅および高さ配分は、マウスで変更できます。<br>
-    入力欄や各リストは等幅フォントで表示されます(テキストビュアーのものを利用、サイズはダイアログのフォントと同じ)。
+    入力欄や各リストは等幅フォントで表示されます(テキストビューアのものを利用、サイズはダイアログのフォントと同じ)。
   </p>
 
   <dl>
