--- a/help/src/hid00089.htm
+++ b/help/src/hid00089.htm
@@ -107,7 +107,7 @@ NyanFi.exe -CR "d:\nyan\doko doko.txt"
 NyanFi.exe -XPlaySound_start.wav
 </pre>
 
-      <b>例</b>: 指定ファイルをテキストビュアーで開き、関数一覧を表示<br>
+      <b>例</b>: 指定ファイルをテキストビューアで開き、関数一覧を表示<br>
       <pre class="example_box">
 NyanFi.exe -XTextViewer_"d:\hoge.txt":FunctionList
 </pre>
