--- a/help/src/hid00091.htm
+++ b/help/src/hid00091.htm
@@ -31,7 +31,7 @@
     </dd>
 
     <dt class="no_bg_indent1">[Option] HEAD_Mark　<span class="def_text">(デフォルト: &#x25b6;)</span></dt>
-    <dd>ファイル情報や<a href="hid00090.htm#GitViewer">Gitビュアー</a>に表示される HEAD マークです。</dd>
+    <dd>ファイル情報や<a href="hid00090.htm#GitViewer">Gitビューア</a>に表示される HEAD マークです。</dd>
 
     <dt class="no_bg_indent1">[Option] PLAY_Mark　<span class="def_text">(デフォルト: &#x25b6;)</span></dt>
     <dd>プレイリスト(<a href="hid00005.htm#PlayList">PlayList</a>)に表示される再生中マークです。</dd>
