--- a/help/src/hid00102.htm
+++ b/help/src/hid00102.htm
@@ -67,7 +67,7 @@
     </dd>
 
     <dt>Highlight.INI</dt>
-    <dd><a href="hid00006.htm">テキストビュアー</a>での構文強調表示をユーザ定義できます。<br>
+    <dd><a href="hid00006.htm">テキストビューア</a>での構文強調表示をユーザ定義できます。<br>
       <a href="hid00084.htm">→ 構文強調表示定義ファイル</a><br>
     </dd>
 
@@ -205,8 +205,8 @@ icon=SSD.ico
 
     <dt>thumbnail.jpg　<span class="small_nrm">(代替データストリーム)</span></dt>
     <dd>サムネイルキャッシュ画像です。<br>
-      <a href="hid00020.htm#ThumbCache">オプション設定 - イメージビュアー - サムネイル - 「代替データストリームにキャッシュ」</a>
-      が有効な場合、イメージビュアーで閲覧した画像ファイルに代替データストリームとして保存されます。<br>
+      <a href="hid00020.htm#ThumbCache">オプション設定 - イメージビューア - サムネイル - 「代替データストリームにキャッシュ」</a>
+      が有効な場合、イメージビューアで閲覧した画像ファイルに代替データストリームとして保存されます。<br>
       <div class="spc_box">
         なおディレクトリやアーカイブの代替データストリームに <b>thumbnail.jpg</b> という名前の画像を保存しておくと、それが優先的にイメージプレビューされます。<br>
       </div>
@@ -214,8 +214,8 @@ icon=SSD.ico
 
     <dt>thumbnail.txt　<span class="small_nrm">(代替データストリーム)</span></dt>
     <dd>サムネイルキャッシュ情報です。<br>
-      <a href="hid00020.htm#ThumbCache">オプション設定 - イメージビュアー - サムネイル - 「代替データストリームにキャッシュ」</a>
-      が有効な場合、イメージビュアーで閲覧した画像ファイルに代替データストリームとして保存されます。<br>
+      <a href="hid00020.htm#ThumbCache">オプション設定 - イメージビューア - サムネイル - 「代替データストリームにキャッシュ」</a>
+      が有効な場合、イメージビューアで閲覧した画像ファイルに代替データストリームとして保存されます。<br>
       内容は、"表示文字列 <span class="ctrl_text">[TAB]</span> タイムスタンプ <span class="ctrl_text">[TAB]</span> サムネイルサイズ <span
         class="ctrl_text">[TAB]</span> 縮小アルゴリズム番号" という一行です。<br>
     </dd>
@@ -223,9 +223,9 @@ icon=SSD.ico
     <dt id="NyanfiDef">nyanfi.def　<span class="small_nrm">(代替データストリーム)</span></dt>
     <dd>ファイルに固有の設定情報です。<br>
       <a
-        href="hid00006.htm">テキストビュアー</a>でCSV/TSVファイルを開いた場合に、「先頭行が項目名」設定(TopIsHeader)と、「項目列の最小化」情報(MinFixedCols=列インデックス番号,…)が保存されます。<br>
+        href="hid00006.htm">テキストビューア</a>でCSV/TSVファイルを開いた場合に、「先頭行が項目名」設定(TopIsHeader)と、「項目列の最小化」情報(MinFixedCols=列インデックス番号,…)が保存されます。<br>
       また、<a href="hid00082.htm">テキストプレビュー</a>や<a
-        href="hid00006.htm">テキストビュアー</a>で文字コードを変更すると、そのコードページ(CodePage)が保存されます。<br>
+        href="hid00006.htm">テキストビューア</a>で文字コードを変更すると、そのコードページ(CodePage)が保存されます。<br>
     </dd>
 
     <dt>favicon　<span class="small_nrm">(代替データストリーム)</span></dt>
