--- a/help/src/hid00104.htm
+++ b/help/src/hid00104.htm
@@ -56,7 +56,7 @@
 
     <dt>Q. マクロのような機能はありますか？</dt>
     <dd>バッチファイルに似た独自形式の<b>コマンドファイル</b>(*.nbt)を利用できます。<br>
-      コマンドファイルでは、ファイラー、テキストビュアー、イメージビュアーの各コマンドの他に、コマンドファイル内でのみ有効な補助コマンドや変数も使えます。また、If や Repeat などの制御文もあります。詳細は「<a
+      コマンドファイルでは、ファイラー、テキストビューア、イメージビューアの各コマンドの他に、コマンドファイル内でのみ有効な補助コマンドや変数も使えます。また、If や Repeat などの制御文もあります。詳細は「<a
         href="hid00063.htm">ExeCommands コマンド</a>」のページを参照してください。<br>
       作成したコマンドファイルは、<a href="hid00005.htm#ExeCommands">ExeCommands</a> コマンドでキーに割り当てられます。またツールバーのボタンやメニューに割り当てたり(<a
         href="hid00014.htm">オプション設定 - 追加メニュー</a>)、イベント発生時に実行させることも可能です(<a href="hid00021.htm">オプション設定 - イベント</a>)。<br>
