--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -17,7 +17,6 @@
     <b>仮設伝言板</b>　<span class="small">お知らせや、名無しさんたちとの間接的なやりとりのためのスペースです(<small>5ちゃんねるに直接書き込むことはありません</small>)。<br></span>
 
     <ul>
-      <li>MoveTo コマンドによる移動ができないとのことですが、こちらでは再現できません。移動する対象(選択/カーソル位置項目、ファイル/ディレクトリ)、移動先ディレクトリの指定内容(相対/絶対、同/別ドライブ)、コマンドの実行方法(キー、ツールボタン、メニューファイル…)などを具体的に教えてください。</li>
       <li>
         Susie プラグインの対応は、WICやアーカイバとの関係で処理がややこしくなるので勘弁してください。<br>
       </li>
@@ -46,14 +45,23 @@
   </div>
 
   <dl>
+    <dt>V16.10 <span class="ver_date">(2023-12-24)</span></dt>
+    <dd>
+      ・オプション設定 - テキストビューア に「インデントガイドを表示」を追加。これに対応するコマンドとして ShorIndent を追加。また、オプション設定 - フォント・配色 に「インデントガイド」、「インデントガイド(交互)」を追加。<br>
+      ・テキストビューアの SelCurWord コマンドのパラメータに EX を追加。カーソルが既存の選択範囲の末尾にある場合、単語を追加選択できます。空白や記号なども順次選択されます。<br>
+      ・オプション設定 - テキストビューア の「外部ビューア」を廃止。必要な場合は「外部ツール」を利用してください。<br>
+      ・オプション設定で検索欄の内容が変化したとき、50m秒待機してから検索を行うようにしました(IME確定時の対策)。<br>
+      ・世の中に合わせて「ビュアー」という表記を「ビューア」に変更しました。<br>
+    </dd>
+
     <dt>V16.09 <span class="ver_date">(2023-12-22)</span></dt>
     <dd>
       ・ファイラーの DateSelect コマンドのパラメータに TD (今日付のファイルを選択)、CP (カーソル位置と同じ日付のファイルを選択)を追加。<br>
       ・オプション設定 - 一般 - 監視/更新 の「アクティブ時に最新の情報に」が有効で、非アクティブな NyanFi のツールボタンやファンクションキーバーのボタンを押したとき、ファイルリストの更新処理中でボタンのコマンドが実行できなかった場合、更新後にそれを実行するようにしました。<br>
       ・コマンドの入力欄(InputCommands コマンド、ツールバーの設定、オプション設定 - イベント)で[F2]キーを押すと、全体を選択/パラメータ(引用符があればその内部)を選択/末尾に移動 の順番に状態が切り替わるようにしました。<br>
       ・desktop.ini でフォルダアイコンが設定されている場合、それを表示するようにしました。SetFolderIcon コマンドで独自設定されている場合は、そちらが優先されます。<br>
-      ・正規表現チェッカーで「詳細」が有効な場合、マッチ/グループ/置換文字列にタブ文字が含まれていると結果が適切に表示されなかったのを修正。結果の引用符内にあるタブ文字は、ビュアーの「タブ表示色」で "\t" と表示するようにしました。<br>
-      ・VSLスタイル(Windows 以外)を適用している場合、サブビュアーをロックしたときの赤枠が表示されないのを修正。ツールウインドウの境界線を赤で表示するようにしました。<br>
+      ・正規表現チェッカーで「詳細」が有効な場合、マッチ/グループ/置換文字列にタブ文字が含まれていると結果が適切に表示されなかったのを修正。結果の引用符内にあるタブ文字は、ビューアの「タブ表示色」で "\t" と表示するようにしました。<br>
+      ・VSLスタイル(Windows 以外)を適用している場合、サブビューアをロックしたときの赤枠が表示されないのを修正。ツールウインドウの境界線を赤で表示するようにしました。<br>
       ・メタファイル(.wmf、.emf)のサムネイルを作成できなくなっていたのを修正。また、画像ファイルの変換(ConvertImage)で、「縮小・拡大を行わない」に設定すると、メタファイルの変換に失敗するのを修正。<br>
       ・特殊フォルダ一覧で TEMP と TMP が同じ表示になっていたのを修正。<br>
     </dd>
@@ -62,23 +70,23 @@
     <dd>
       ・オプション設定 - 一般 - 操作 の「アクセラレータキー自動調整」をチェックしていないと、PopupMainMenu
       コマンドで個別にメニューを開いたときに通常のアクセラレータキーが表示されない場合があるので、このオプションは廃止し、常に自動調整するようにしました。<br>
-      ・テキストビュアーの JumpLine コマンドのパラメータに ST を追加。スティッキーが表示されている場合、その行に移動します。<br>
+      ・テキストビューアの JumpLine コマンドのパラメータに ST を追加。スティッキーが表示されている場合、その行に移動します。<br>
     </dd>
 
     <dt>V16.07 <span class="ver_date">(2023-12-13)</span></dt>
     <dd>
-      ・オプション設定 - テキストビュアー に「関数/見出し等をスティッキー表示」を追加。ビュアーの最上行位置に、関数の先頭行や見出し(FunctionList
-      コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。スティッキーをクリックすると、その行にカーソルが移動します。<br>
+      ・オプション設定 - テキストビューア に「関数/見出し等をスティッキー表示」を追加。ビューアの最上行位置に、関数の先頭行や見出し(FunctionList
+      コマンドで表示される項目)をスティッキー表示します。表示部は、ビューア背景色の明度を加減した色になります。スティッキーをクリックすると、その行にカーソルが移動します。<br>
       ・名前の変更ダイアログの「連番」タブで使用できる書式文字列に \DT()
       を追加。書式にしたがった現在日時に変換されます。これにともない、対応する[現在]ボタンを追加。また紛らわしいので、従来の[日時]ボタン(タイムスタンプ)を[タイム]に変更。<br>
       ・名前の変更ダイアログの「名前」タブで入力欄にフォーカスがある場合に[F2]キーを押すと、ファイル名主部の末尾/先頭/主部を選択/全体を選択 の順番に状態が切り替わるようにしました。<br>
       ・メインメニュー非表示で画面モードを切り替えたとき、表示に切り替わってしまうのを修正(V16.05)。<br>
-      ・イメージビュアーでファイルを削除する際、先頭画像が一瞬表示されてしまうのを修正。<br>
+      ・イメージビューアでファイルを削除する際、先頭画像が一瞬表示されてしまうのを修正。<br>
     </dd>
 
     <dt>V16.06 <span class="ver_date">(2023-12-09)</span></dt>
     <dd>
-      ・イメージビュアーを全画面表示にすると、Next/PrevFile が機能しなくなったり、サムネイルを表示できなくなったりする不具合を修正。
+      ・イメージビューアを全画面表示にすると、Next/PrevFile が機能しなくなったり、サムネイルを表示できなくなったりする不具合を修正。
     </dd>
 
     <dt>V16.05 <span class="ver_date">(2023-12-07)</span></dt>
@@ -109,7 +117,7 @@
       ・オプション設定 - フォント・配色
       に「非アクティブなメイン画面の一部をグレー化」を追加。メイン画面が非アクティブになったときに、タブ、ディレクトリ情報、およびディレクトリ関係の部分をグレースケール化(明暗も加減)します。非アクティブ時のタイトルバーの変化が分かりにくいスタイルで役立つかもしれません。<br>
       ・.nyanfi ファイルによる「ディレクトリ情報の文字色」の設定が適用されなくなっていたのを修正。<br>
-      ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、XMLビュアー、JSONビュアー、アプリケーション一覧、CSV/TSVレコードのスクロールバーにスタイルが適用されなかったのを修正。<br>
+      ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、XMLビューア、JSONビューア、アプリケーション一覧、CSV/TSVレコードのスクロールバーにスタイルが適用されなかったのを修正。<br>
     </dd>
 
     <dt>V16.01 <span class="ver_date">(2023-11-24)</span></dt>
@@ -119,8 +127,8 @@
       ・オプション設定 - フォント・配色 で、スタイルの影響を受ける一般的な部分の色設定を無効化できるようにしました。これにより、スタイル変更時の修正が楽になります。<br>
       ・オプション設定 - フォント・配色 で「ステータスバー」にサイズの大きなフォントを割り当てたとき、バーの高さが適切に調整されなかったのを修正。<br>
       ・縦横両方のシンプルスクロールバーが表示されている場合、一方のノブをつかむともう一方のノブ色も変化していたのを修正。<br>
-      ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、イメージビュアーのファイル情報とサムネイルのスクロールバーにスタイルが適用されなかったのを修正。<br>
-      ・イメージビュアーでシークバーを表示していて、コマンドではなく左右端のボタンで先頭/最後に移動したとき、シークバーの位置が正しく追従しなかったのを修正。<br>
+      ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、イメージビューアのファイル情報とサムネイルのスクロールバーにスタイルが適用されなかったのを修正。<br>
+      ・イメージビューアでシークバーを表示していて、コマンドではなく左右端のボタンで先頭/最後に移動したとき、シークバーの位置が正しく追従しなかったのを修正。<br>
     </dd>
 
     <dt>V16.00 <span class="ver_date">(2023-11-22)</span></dt>
@@ -133,7 +141,7 @@
       ・Ricty Diminished フォントはサポート終了となっているようなので対応を止めました。<br>
       ・VCLスタイルを適用すると従来のヘルプ表示が乱れるため、hh.exe を別プロセスで実行するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 -
       一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、F1 キーによる元画面とヘルプ画面間の移動もできなくなりました。<br>
-      ・テキストビュアーの HelpCurWord コマンドは hhh.exe (saitou155 氏作)を利用するようにしました。実行するには、あらかじめパスの通ったディレクトリにインストールしておいてください。<br>
+      ・テキストビューアの HelpCurWord コマンドは hhh.exe (saitou155 氏作)を利用するようにしました。実行するには、あらかじめパスの通ったディレクトリにインストールしておいてください。<br>
       ・オプション設定 - デザイン - ステータスバーの書式 の「時計パネル」で使える書式文字列に $WS、$FP を追加。メモリ使用量(Working Set/ Pagefile)をKB単位で表示します。<br>
     </dd>
   </dl>
