--- a/help/src/hid00201.htm
+++ b/help/src/hid00201.htm
@@ -3,26 +3,26 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-  <title>ビュアー</title>
+  <title>ビューア</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="ビュアー">
+    <param name="Keyword" value="ビューア">
   </object>
 </head>
 
 <body>
 
-  <h1>ビュアー</h1>
+  <h1>ビューア</h1>
 
   <dl>
-    <dt class="no_bg_indent1"><a href="hid00006.htm">テキストビュアー</a></dt>
-    <dd>ファイルリストで <a href="hid00005.htm#TextViewer">TextViewer</a> コマンドを実行すると、テキストビュアー画面に切り替わります。<br>
-      <a href="hid00005.htm#TextViewer">TextViewer</a>_XW コマンドを実行すると、テキストビュアーを別ウィンドウで開くことも可能です。<br>
+    <dt class="no_bg_indent1"><a href="hid00006.htm">テキストビューア</a></dt>
+    <dd>ファイルリストで <a href="hid00005.htm#TextViewer">TextViewer</a> コマンドを実行すると、テキストビューア画面に切り替わります。<br>
+      <a href="hid00005.htm#TextViewer">TextViewer</a>_XW コマンドを実行すると、テキストビューアを別ウィンドウで開くことも可能です。<br>
     </dd>
 
-    <dt class="no_bg_indent1"><a href="hid00007.htm">イメージビュアー</a></dt>
-    <dd>ファイルリストで <a href="hid00005.htm#ImageViewer">ImageViewer</a> コマンドを実行すると、イメージビュアー画面に切り替わります。<br>
-      なお、<a href="hid00005.htm#SubViewer">SubViewer</a> コマンドを実行すると、カーソル位置の画像を別ウィンドウで簡易表示するサブビュアーが開きます。
+    <dt class="no_bg_indent1"><a href="hid00007.htm">イメージビューア</a></dt>
+    <dd>ファイルリストで <a href="hid00005.htm#ImageViewer">ImageViewer</a> コマンドを実行すると、イメージビューア画面に切り替わります。<br>
+      なお、<a href="hid00005.htm#SubViewer">SubViewer</a> コマンドを実行すると、カーソル位置の画像を別ウィンドウで簡易表示するサブビューアが開きます。
     </dd>
   </dl>
 
