--- a/help/src/hid00202.htm
+++ b/help/src/hid00202.htm
@@ -72,7 +72,7 @@
       <td><a href="hid00073.htm">一覧ダイアログ</a></td>
     </tr>
     <tr>
-      <td><a href="hid00081.htm">XMLビュアー</a></td>
+      <td><a href="hid00081.htm">XMLビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00056.htm">文字列検索(GREP)</a></td>
