--- a/help/src/hid00016.htm
+++ b/help/src/hid00016.htm
@@ -24,8 +24,8 @@
 
   <h1>オプション設定 - キー設定</h1>
   <p>
-    <b>ファイラー</b>、INC.サーチ(<a href="hid00050.htm">インクリメンタルサーチ・モード</a>)、<a href="hid00006.htm">テキストビュアー</a>、<a
-      href="hid00007.htm">イメージビュアー</a>、<b>ログウィンドウ</b>のそれぞれについて、コマンドをキーに割り当てられます。
+    <b>ファイラー</b>、INC.サーチ(<a href="hid00050.htm">インクリメンタルサーチ・モード</a>)、<a href="hid00006.htm">テキストビューア</a>、<a
+      href="hid00007.htm">イメージビューア</a>、<b>ログウィンドウ</b>のそれぞれについて、コマンドをキーに割り当てられます。
   </p>
   <p>
     <a href="hid00014.htm">追加メニュー</a>や<a
@@ -33,7 +33,7 @@
     エイリアス名で表示)。サブメニューの親項目のエイリアスでは、そのサブメニューがポップアップ表示されます。
   </p>
   <p>
-    ファイラー、テキストビュアーおよびイメージビュアーでは、<b>2ストロークキー操作</b>が可能です。ただしカーソルキー、<b>PGUP</b>、<b>PGDN</b>、<b>HOME</b>、<b>END</b>、<b>TAB</b>
+    ファイラー、テキストビューアおよびイメージビューアでは、<b>2ストロークキー操作</b>が可能です。ただしカーソルキー、<b>PGUP</b>、<b>PGDN</b>、<b>HOME</b>、<b>END</b>、<b>TAB</b>
     は開始キーにできません(2ストローク目には使用可能)。一覧では、<b>Q~P</b> というように <b>~</b> を付けて表示されます。
   </p>
 
