--- a/help/src/hid00023.htm
+++ b/help/src/hid00023.htm
@@ -35,7 +35,7 @@
   <dl>
     <dt id="Font"><img src="grpbox.png" alt=""> フォント</dt>
     <dd>コンボボックスで設定対象を選び、<span class="btn_frame">...</span>ボタンでフォントを参照してください。<br>
-      「<b>テキストビュアー</b>」以外では、プロポーショナルフォントも設定できます。サイズは整数で指定してください(10.5 などは不可)。<br>
+      「<b>テキストビューア</b>」以外では、プロポーショナルフォントも設定できます。サイズは整数で指定してください(10.5 などは不可)。<br>
       <div class="spc_box">
         ファンクションキーバーのボタン幅は表示文字列によって決まります。幅をそろえるために、文字数が少ない場合は空白を追加して調整していますが、「<b>ツールボタン</b>」にプロポーショナルフォントを用いているとバラつく可能性があります。ボタン幅をそろえたい場合は、等幅フォントを使用してください。<br>
       </div>
@@ -116,14 +116,14 @@
           href="hid00006.htm#CharInfo">CharInfo</a>)、CSV/TSVレコード(<a
           href="hid00006.htm#CsvRecord">CsvRecord</a>)、インスペクタ(<a
           href="hid00006.htm#Inspector">Inspector</a>)、ビットマップビュー(<a
-          href="hid00006.htm#BitmapView">BitmapView</a>)、サブビュアー(<a
+          href="hid00006.htm#BitmapView">BitmapView</a>)、サブビューア(<a
           href="hid00007.htm#SubViewer">SubViewer</a>)、浮動化されたルーペ(<a href="hid00007.htm#Loupe">Loupe</a>)/ヒストグラム(<a
           href="hid00007.htm#Histogram">Histogram</a>)に、1px相当の境界線が表示されます。アクティブ/非アクティブで色は変わりません。Windows 10
         でツールウインドウの境界が分かりにくい場合に利用してみてください。<br>
       </div>
 
       <div class="spc_box">
-        テキストビュアーの配色については、ファイラー、テキストビュアーの <a href="hid00006.htm#SetColor">SetColor</a> コマンドでも設定・変更できます。<br>
+        テキストビューアの配色については、ファイラー、テキストビューアの <a href="hid00006.htm#SetColor">SetColor</a> コマンドでも設定・変更できます。<br>
       </div>
 
       <div class="spc_box">
@@ -158,7 +158,7 @@
     </dd>
 
     <dt id="Tag"><img src="grpbox.png" alt=""> タグ別配色</dt>
-    <dd>ファイルリスト、ファイル情報、およびイメージビュアーのサムネイルにタグを表示する際の文字色を個別に設定できます。<br>
+    <dd>ファイルリスト、ファイル情報、およびイメージビューアのサムネイルにタグを表示する際の文字色を個別に設定できます。<br>
       未設定の場合は「<b>配色</b>」の「<b>デフォルトのタグ色</b>」が用いられます。<span class="btn_frame">デフォルト</span>ボタンを押すとデフォルトに戻ります。<br>
       <img src="chkbox.png" alt=""> <b>反転</b> をチェックすると、タグの文字色/背景色を反転して表示します。<br>
       タグ別配色は、タグ関係のダイアログで、一覧の右クリックメニューから直接設定することも可能です。<br>
