--- a/help/src/hid00065.htm
+++ b/help/src/hid00065.htm
@@ -10,7 +10,7 @@
     <param name="Keyword" value="FindText">
     <param name="Keyword" value="FindUp">
     <param name="Keyword" value="Migemo">
-    <param name="Keyword" value="テキストビュアー">
+    <param name="Keyword" value="テキストビューア">
     <param name="Keyword" value="バイト列検索">
     <param name="Keyword" value="バイナリ・ダンプ表示">
     <param name="Keyword" value="強調表示">
@@ -23,7 +23,7 @@
 
   <h1>文字列検索ダイアログ</h1>
   <p>
-    <a href="hid00006.htm">テキストビュアー</a>で <a href="hid00006.htm#FindText">FindText</a>
+    <a href="hid00006.htm">テキストビューア</a>で <a href="hid00006.htm#FindText">FindText</a>
     コマンドを実行するとこのダイアログが開き、文字列を検索できます。<br>
     またバイナリ・ダンプ表示の場合は、バイト列の検索も可能です。ただし、表示範囲(バイナリ最大読込サイズ)を超えての検索はできません。<br>
   </p>
