--- a/help/src/hid00081.htm
+++ b/help/src/hid00081.htm
@@ -3,25 +3,25 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-  <title>XMLビュアー</title>
+  <title>XMLビューア</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
     <param name="Keyword" value="XmlViewer">
-    <param name="Keyword" value="XMLビュアー">
+    <param name="Keyword" value="XMLビューア">
   </object>
 </head>
 
 <body>
 
-  <h1>XMLビュアー</h1>
+  <h1>XMLビューア</h1>
   <p>
-    ファイラーで <a href="hid00005.htm#XmlViewer">XmlViewer</a> コマンドを実行すると<b>XMLビュアー</b>が開き、カーソル位置のXMLファイルをツリービューで閲覧できます。<br>
+    ファイラーで <a href="hid00005.htm#XmlViewer">XmlViewer</a> コマンドを実行すると<b>XMLビューア</b>が開き、カーソル位置のXMLファイルをツリービューで閲覧できます。<br>
   </p>
 
   <dl>
     <dt class="no_bg">ツリービューでの操作</dt>
     <dd>
-      カーソル移動などは、標準キー以外に、ファイラーやテキストビュアーで割り当てられているのと同じキーによっても可能です(CursorDown/Up/Top/End、TextTop/End(TV)、PageDown/Up
+      カーソル移動などは、標準キー以外に、ファイラーやテキストビューアで割り当てられているのと同じキーによっても可能です(CursorDown/Up/Top/End、TextTop/End(TV)、PageDown/Up
       コマンドに対応)。<br>
       <span class="btn_frame">ENTER</span>キーを押すと、選択中のノードを開閉できます。このとき <img src="chkbox.png" alt=""> <b>自動開閉</b>
       がチェックされていると、展開したノードと同レベルの他のノードがすべて畳まれます。<br>
@@ -40,7 +40,7 @@
       (ノードの属性)/<img src="chkbox.png" alt=""> <b>値</b> で検索対象を設定して<span class="btn_frame">∨</span>/<span
         class="btn_frame">∧</span>ボタンを押すと、下方向/上方向に検索できます。なお、ツリービューの表示モードが「<b>ノード名</b>」の場合、属性は検索できません。<br>
       ボタンの代わりに<b>検索</b>覧で<span class="btn_frame">↓</span>/<span
-        class="btn_frame">↑</span>キーでも検索可能。またツリービューにフォーカスがある場合は、テキストビュアーで <b>FindDown</b>/<b>FindUp</b>
+        class="btn_frame">↑</span>キーでも検索可能。またツリービューにフォーカスがある場合は、テキストビューアで <b>FindDown</b>/<b>FindUp</b>
       コマンドが割り当てられているのと同じキーによっても検索できます(下方向は<span class="btn_frame">F3</span>キーでも可)。<br>
 
       <div class="spc_box">
@@ -89,7 +89,7 @@
     <dd>
       ツリービューの表示フォントは、<a href="hid00023.htm#Font">オプション設定 - フォント・配色</a> - フォント の「<b>リスト</b>」が用いられます。<br>
       背景は「<b>リストの背景色</b>」になります。また、ノード名および属性名は「<b>予約語の文字色</b>」、属性値は「文字列の文字色」、記号は「<b>シンボルの文字色</b>」、XMLコメントは「<b>コメントの文字色</b>」、値がURLの場合は「<b>URLの文字色</b>」、それ以外は「<b>リストの文字色</b>」になります。<br>
-      ノードをつなぐラインやプラス/マイナスボタンは、テキストビュアーの「<b>罫線の色</b>」で描かれます。<br>
+      ノードをつなぐラインやプラス/マイナスボタンは、テキストビューアの「<b>罫線の色</b>」で描かれます。<br>
       なお、ツリービューにはシンプルスクロールバーの設定が適用されず、標準のスクロールバーになります。<br>
     </dd>
   </dl>
