--- a/help/src/hid00090.htm
+++ b/help/src/hid00090.htm
@@ -14,7 +14,7 @@
     <param name="Keyword" value="git-bash.exe">
     <param name="Keyword" value="git-gui.exe">
     <param name="Keyword" value="GitViewer">
-    <param name="Keyword" value="Gitビュアー">
+    <param name="Keyword" value="Gitビューア">
     <param name="Keyword" value="OpenGitURL">
     <param name="Keyword" value="Pack">
     <param name="Keyword" value="RepositoryList">
@@ -37,7 +37,7 @@
   </p>
 
   <p class="link_box">
-    <a href="#FileInfo">ファイル情報の表示</a> ／ <a href="#GitViewer">Gitビュアー</a> ／ <a href="#RepositoryList">リポジトリ一覧</a> ／ <a
+    <a href="#FileInfo">ファイル情報の表示</a> ／ <a href="#GitViewer">Gitビューア</a> ／ <a href="#RepositoryList">リポジトリ一覧</a> ／ <a
       href="#GitCommand">Git 補助コマンドの利用</a>
   </p>
 
@@ -88,8 +88,8 @@
 
   <p>
     キー操作などは他の一覧と同様です。数字キーまたは<span class="btn_frame">ENTER</span>キーで確定すると、そのディレクトリに移動します。<br>
-    また右クリックメニューの「<b>Gitビュアーを開く</b>」(<a href="hid00005.htm#GitViewer">GitViewer</a>、<a
-      href="hid00005.htm#TextViewer">TextViewer</a> コマンドのキーでも可)では、ディレクトリ移動後に<a href="#GitViewer">Gitビュアー</a>を開きます。<br>
+    また右クリックメニューの「<b>Gitビューアを開く</b>」(<a href="hid00005.htm#GitViewer">GitViewer</a>、<a
+      href="hid00005.htm#TextViewer">TextViewer</a> コマンドのキーでも可)では、ディレクトリ移動後に<a href="#GitViewer">Gitビューア</a>を開きます。<br>
     <span class="btn_frame">DEL</span>キー、または <a href="hid00005.htm#Delete">Delete</a>
     コマンドが割り当てられているキーを押すと、カーソル位置の項目をキャッシュ内容ごと削除できます。
   </p>
@@ -101,12 +101,12 @@
   </p>
   <br>
 
-  <h3 id="GitViewer">Gitビュアー</h3>
+  <h3 id="GitViewer">Gitビューア</h3>
   <div class="spc_box_p">
-    Gitの作業ディレクトリ内で <a href="hid00005.htm#GitViewer">GitViewer</a> コマンドを実行すると、<b>Gitビュアー</b>が表示されます。<br>
+    Gitの作業ディレクトリ内で <a href="hid00005.htm#GitViewer">GitViewer</a> コマンドを実行すると、<b>Gitビューア</b>が表示されます。<br>
   </div>
   <div class="spc_box_p info_text">
-    Gitビュアーから git.exe やその他のツールを実行する際の作業ディレクトリは、Git作業ディレクトリのトップ(直下に .git があるディレクトリ)になります。
+    Gitビューアから git.exe やその他のツールを実行する際の作業ディレクトリは、Git作業ディレクトリのトップ(直下に .git があるディレクトリ)になります。
   </div>
 
   <dl>
@@ -194,7 +194,7 @@
   </dl>
 
   <div class="spc_box_p">
-    カーソル移動などは、ファイラーやテキストビュアーで割り当てられているのと同じキー操作でできます。<br>
+    カーソル移動などは、ファイラーやテキストビューアで割り当てられているのと同じキー操作でできます。<br>
     ブランチ一覧/コミット履歴間のフォーカス移動は、<a href="hid00005.htm#ToLeft">ToLeft</a> / <a href="hid00005.htm#ToRight">ToRight</a>、<a
       href="hid00005.htm#ToParentOnLeft">ToParentOnLeft</a> / <a href="hid00005.htm#ToParentOnRight">ToParentOnRight</a>
     コマンドが割り当てられているキーや、<span class="btn_frame">←</span> / <span class="btn_frame">→</span>キーで行えます。<br>
