--- a/help/src/hid00100.htm
+++ b/help/src/hid00100.htm
@@ -6,10 +6,10 @@
   <title>コマンドの索引(アルファベット順)</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="イメージビュアー">
+    <param name="Keyword" value="イメージビューア">
     <param name="Keyword" value="インクリメンタルサーチ">
     <param name="Keyword" value="コマンドの索引">
-    <param name="Keyword" value="テキストビュアー">
+    <param name="Keyword" value="テキストビューア">
     <param name="Keyword" value="ファイラー">
     <param name="Keyword" value="ログウィンドウ">
   </object>
@@ -34,8 +34,8 @@
   <h1>コマンドの索引(アルファベット順)</h1>
 
   <p class="link_box">
-    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビュアー</a> ／ <a
-      href="#IV">イメージビュアー</a> ／ <a href="#LW">ログウィンドウ</a><br>
+    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビューア</a> ／ <a
+      href="#IV">イメージビューア</a> ／ <a href="#LW">ログウィンドウ</a><br>
     　　<a href="hid00101.htm">→ 機能順索引</a> ／ 　<a href="hid00063.htm">→ ExeCommands コマンド</a>
   </p>
   <br>
@@ -648,7 +648,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#FixedLen">FixedLen</a></td>
-      <td>テキストビュアーでCSV/TSVを固定長表示</td>
+      <td>テキストビューアでCSV/TSVを固定長表示</td>
       <td>※TV</td>
     </tr>
     <tr>
@@ -689,7 +689,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#GitViewer">GitViewer</a></td>
-      <td>Gitビュアー</td>
+      <td>Gitビューア</td>
       <td><a href="hid00090.htm">→ Git の利用について</a></td>
     </tr>
     <tr>
@@ -715,14 +715,14 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#HtmlToText">HtmlToText</a></td>
-      <td>テキストビュアーでHTML→テキスト変換表示</td>
+      <td>テキストビューアでHTML→テキスト変換表示</td>
       <td>※TV</td>
     </tr>
 
     <tr id="f_I">
       <td><a href="hid00005.htm#ImageViewer">ImageViewer</a></td>
-      <td>イメージビュアーで開く</td>
-      <td><a href="hid00007.htm">→ イメージビュアー</a></td>
+      <td>イメージビューアで開く</td>
+      <td><a href="hid00007.htm">→ イメージビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#IncSearch">IncSearch</a></td>
@@ -772,8 +772,8 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#JsonViewer">JsonViewer</a></td>
-      <td>JSONビュアー</td>
-      <td><a href="hid00092.htm">→ JSONビュアー</a></td>
+      <td>JSONビューア</td>
+      <td><a href="hid00092.htm">→ JSONビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#JumpTo">JumpTo</a></td>
@@ -925,7 +925,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#MenuBar">MenuBar</a></td>
-      <td>メニューバーの表示/非表示</td>
+      <td>メニューバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1385,7 +1385,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetColor">SetColor</a></td>
-      <td>テキストビュアーの配色</td>
+      <td>テキストビューアの配色</td>
       <td>※TV</td>
     </tr>
     <tr>
@@ -1415,7 +1415,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetMargin">SetMargin</a></td>
-      <td>テキストビュアーの左側余白を設定</td>
+      <td>テキストビューアの左側余白を設定</td>
       <td>※TV</td>
     </tr>
     <tr>
@@ -1435,7 +1435,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetTab">SetTab</a></td>
-      <td>テキストビュアーのタブストップ幅を設定</td>
+      <td>テキストビューアのタブストップ幅を設定</td>
       <td>※TV</td>
     </tr>
     <tr>
@@ -1445,7 +1445,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetWidth">SetWidth</a></td>
-      <td>テキストビュアーの折り返し幅を設定</td>
+      <td>テキストビューアの折り返し幅を設定</td>
       <td>※TV</td>
     </tr>
     <tr>
@@ -1460,7 +1460,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowCR">ShowCR</a></td>
-      <td>テキストビュアーで改行を表示/非表示</td>
+      <td>テキストビューアで改行を表示</td>
       <td>※TV</td>
     </tr>
     <tr>
@@ -1470,7 +1470,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowFKeyBar">ShowFKeyBar</a></td>
-      <td>ファンクションキーバーの表示/非表示</td>
+      <td>ファンクションキーバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1480,42 +1480,47 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowIcon">ShowIcon</a></td>
-      <td>アイコンの表示/非表示</td>
+      <td>アイコンの表示</td>
       <td></td>
     </tr>
     <tr>
+      <td><a href="hid00005.htm#ShowIndent">ShowIndent</a></td>
+      <td>テキストビューアのインデントガイドを表示</td>
+      <td>※TV</td>
+    </tr>
+    <tr>
       <td><a href="hid00005.htm#ShowLineNo">ShowLineNo</a></td>
-      <td>テキストビュアーの行番号を表示/非表示</td>
+      <td>テキストビューアの行番号を表示</td>
       <td>※TV</td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowLogWin">ShowLogWin</a></td>
-      <td>ログウィンドウの表示/非表示</td>
+      <td>ログウィンドウの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowPreview">ShowPreview</a></td>
-      <td>プレビューの表示/非表示</td>
+      <td>プレビューの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowProperty">ShowProperty</a></td>
-      <td>ファイル情報の表示/非表示</td>
+      <td>ファイル情報の表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowRuby">ShowRuby</a></td>
-      <td>テキストビュアーでルビを表示/非表示</td>
+      <td>テキストビューアでルビを表示</td>
       <td>※TV</td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowRuler">ShowRuler</a></td>
-      <td>テキストビュアーのルーラを表示/非表示</td>
+      <td>テキストビューアのルーラを表示</td>
       <td>※TV</td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowStatusBar">ShowStatusBar</a></td>
-      <td>ステータスバーの表示/非表示</td>
+      <td>ステータスバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1525,12 +1530,12 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowTAB">ShowTAB</a></td>
-      <td>テキストビュアーでタブを表示/非表示</td>
+      <td>テキストビューアでタブを表示</td>
       <td>※TV</td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowTabBar">ShowTabBar</a></td>
-      <td>タブバーの表示/非表示</td>
+      <td>タブバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1565,7 +1570,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#SubViewer">SubViewer</a></td>
-      <td>サブビュアーの表示/非表示</td>
+      <td>サブビューアの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1616,12 +1621,12 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#TextViewer">TextViewer</a></td>
-      <td>テキストビュアーで開く</td>
-      <td><a href="hid00006.htm">→ テキストビュアー</a></td>
+      <td>テキストビューアで開く</td>
+      <td><a href="hid00006.htm">→ テキストビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ToExViewer">ToExViewer</a></td>
-      <td>別ウィンドウのテキストビュアーへ</td>
+      <td>別ウィンドウのテキストビューアへ</td>
       <td></td>
     </tr>
     <tr>
@@ -1738,7 +1743,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ViewLog">ViewLog</a></td>
-      <td>タスクログをテキストビュアーで表示</td>
+      <td>タスクログをテキストビューアで表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1815,8 +1820,8 @@
 
     <tr id="f_X">
       <td><a href="hid00005.htm#XmlViewer">XmlViewer</a></td>
-      <td>XMLビュアー</td>
-      <td><a href="hid00081.htm">→ XMLビュアー</a></td>
+      <td>XMLビューア</td>
+      <td><a href="hid00081.htm">→ XMLビューア</a></td>
     </tr>
 
     <tr id="f_Z">
@@ -1916,9 +1921,9 @@
     </tr>
   </table>
 
-  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#IV">イメージビュアー</a> ／ <a href="#LW">ログウィンドウ</a></p>
+  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#IV">イメージビューア</a> ／ <a href="#LW">ログウィンドウ</a></p>
 
-  <h2 id="TV">テキストビュアー</h2>
+  <h2 id="TV">テキストビューア</h2>
   <p class="link_box">
     <a href="#v_A">A</a> <a href="#v_B">B</a> <a href="#v_C">C</a> <a href="#v_D">D</a> <a href="#v_E">E</a> <a
       href="#v_F">F</a> <a href="#v_G">G</a> <a href="#v_H">H</a> <a href="#v_I">I</a> <a href="#v_J">J</a> <a
@@ -1941,7 +1946,7 @@
 
     <tr id="v_B">
       <td><a href="hid00006.htm#BackViewHist">BackViewHist</a></td>
-      <td>テキストビュアーの履歴を戻る</td>
+      <td>テキストビューアの履歴を戻る</td>
       <td></td>
     </tr>
     <tr>
@@ -1951,7 +1956,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#BitmapView">BitmapView</a></td>
-      <td>ビットマップビューの表示/非表示</td>
+      <td>ビットマップビューの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1977,7 +1982,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#CharInfo">CharInfo</a></td>
-      <td>文字情報の表示/非表示</td>
+      <td>文字情報の表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2022,7 +2027,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#CsvRecord">CsvRecord</a></td>
-      <td>CSV/TSVレコードの表示/非表示</td>
+      <td>CSV/TSVレコードの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2170,7 +2175,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#FixedLen">FixedLen</a></td>
-      <td>テキストビュアーでCSV/TSVを固定長表示</td>
+      <td>テキストビューアでCSV/TSVを固定長表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2202,7 +2207,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#HtmlToText">HtmlToText</a></td>
-      <td>テキストビュアーでHTML→テキスト変換表示</td>
+      <td>テキストビューアでHTML→テキスト変換表示</td>
       <td></td>
     </tr>
 
@@ -2224,7 +2229,7 @@
 
     <tr>
       <td><a href="hid00006.htm#Inspector">Inspector</a></td>
-      <td>インスペクタの表示/非表示</td>
+      <td>インスペクタの表示</td>
       <td></td>
     </tr>
 
@@ -2282,7 +2287,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#MenuBar">MenuBar</a></td>
-      <td>メニューバーの表示/非表示</td>
+      <td>メニューバーの表示</td>
       <td></td>
     </tr>
 
@@ -2432,7 +2437,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetColor">SetColor</a></td>
-      <td>テキストビュアーの配色</td>
+      <td>テキストビューアの配色</td>
       <td></td>
     </tr>
     <tr>
@@ -2442,12 +2447,12 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetMargin">SetMargin</a></td>
-      <td>テキストビュアーの左側余白を設定</td>
+      <td>テキストビューアの左側余白を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetTab">SetTab</a></td>
-      <td>テキストビュアーのタブストップ幅を設定</td>
+      <td>テキストビューアのタブストップ幅を設定</td>
       <td></td>
     </tr>
     <tr>
@@ -2462,7 +2467,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetWidth">SetWidth</a></td>
-      <td>テキストビュアーの折り返し幅を設定</td>
+      <td>テキストビューアの折り返し幅を設定</td>
       <td></td>
     </tr>
     <tr>
@@ -2472,27 +2477,32 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowFKeyBar">ShowFKeyBar</a></td>
-      <td>ファンクションキーバーの表示/非表示</td>
+      <td>ファンクションキーバーの表示</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><a href="hid00006.htm#ShowIndent">ShowIndent</a></td>
+      <td>テキストビューアのインデントガイドを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowLineNo">ShowLineNo</a></td>
-      <td>テキストビュアーの行番号を表示/非表示</td>
+      <td>テキストビューアの行番号を表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowRuby">ShowRuby</a></td>
-      <td>テキストビュアーでルビを表示/非表示</td>
+      <td>テキストビューアでルビを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowRuler">ShowRuler</a></td>
-      <td>テキストビュアーのルーラを表示/非表示</td>
+      <td>テキストビューアのルーラを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowStatusBar">ShowStatusBar</a></td>
-      <td>ステータスバーの表示/非表示</td>
+      <td>ステータスバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2528,12 +2538,12 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#TagView">TagView</a></td>
-      <td>ビュアーでタグジャンプ</td>
+      <td>ビューアでタグジャンプ</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#TagViewDirect">TagViewDirect</a></td>
-      <td>ビュアーでダイレクトタグジャンプ</td>
+      <td>ビューアでダイレクトタグジャンプ</td>
       <td><a href="hid00083.htm">→ ダイレクトタグジャンプ</a></td>
     </tr>
     <tr>
@@ -2617,9 +2627,9 @@
     </tr>
   </table>
 
-  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビュアー</a> ／ <a href="#LW">ログウィンドウ</a></p>
+  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビューア</a> ／ <a href="#LW">ログウィンドウ</a></p>
 
-  <h2 id="IV">イメージビュアー</h2>
+  <h2 id="IV">イメージビューア</h2>
   <p class="link_box">
     <a href="#i_A">A</a> <a href="#i_C">C</a> <a href="#i_D">D</a> <a href="#i_E">E</a> <a href="#i_F">F</a> <a
       href="#i_G">G</a> <a href="#i_H">H</a> <a href="#i_I">I</a> <a href="#i_J">J</a> <a href="#i_K">K</a> <a
@@ -2776,7 +2786,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Histogram">Histogram</a></td>
-      <td>ヒストグラムの表示/非表示</td>
+      <td>ヒストグラムの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2825,7 +2835,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Loupe">Loupe</a></td>
-      <td>ルーペの表示/非表示</td>
+      <td>ルーペの表示</td>
       <td></td>
     </tr>
 
@@ -2846,7 +2856,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#MenuBar">MenuBar</a></td>
-      <td>メニューバーの表示/非表示</td>
+      <td>メニューバーの表示</td>
       <td></td>
     </tr>
 
@@ -3046,22 +3056,22 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowFKeyBar">ShowFKeyBar</a></td>
-      <td>ファンクションキーバーの表示/非表示</td>
+      <td>ファンクションキーバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowGrid">ShowGrid</a></td>
-      <td>画像分割グリッドの表示/非表示</td>
+      <td>画像分割グリッドの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowSeekBar">ShowSeekBar</a></td>
-      <td>シークバーの表示/非表示</td>
+      <td>シークバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowStatusBar">ShowStatusBar</a></td>
-      <td>ステータスバーの表示/非表示</td>
+      <td>ステータスバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3071,7 +3081,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Sidebar">Sidebar</a></td>
-      <td>サイドバーの表示/非表示</td>
+      <td>サイドバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3086,7 +3096,7 @@
     </tr>
     <tr id="SubViewer">
       <td><a href="hid00007.htm#SubViewer">SubViewer</a></td>
-      <td>サブビュアーの表示/非表示</td>
+      <td>サブビューアの表示</td>
       <td></td>
     </tr>
 
@@ -3097,7 +3107,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Thumbnail">Thumbnail</a></td>
-      <td>サムネイルの表示/非表示</td>
+      <td>サムネイルの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3149,7 +3159,7 @@
     </tr>
   </table>
 
-  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビュアー</a> ／ <a href="#IV">イメージビュアー</a></p>
+  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビューア</a> ／ <a href="#IV">イメージビューア</a></p>
 
   <h2 id="LW">ログウィンドウ</h2>
   <table cellspacing="0">
@@ -3240,7 +3250,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ViewLog">ViewLog</a></td>
-      <td>タスクログをテキストビュアーで表示</td>
+      <td>タスクログをテキストビューアで表示</td>
       <td></td>
     </tr>
   </table>
