--- a/help/src/hid00101.htm
+++ b/help/src/hid00101.htm
@@ -6,10 +6,10 @@
   <title>コマンドの索引(機能別)</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="イメージビュアー">
+    <param name="Keyword" value="イメージビューア">
     <param name="Keyword" value="インクリメンタルサーチ">
     <param name="Keyword" value="コマンドの索引">
-    <param name="Keyword" value="テキストビュアー">
+    <param name="Keyword" value="テキストビューア">
     <param name="Keyword" value="ファイラー">
   </object>
 
@@ -37,8 +37,8 @@
   <h1>コマンドの索引(機能別)</h1>
 
   <p class="link_box">
-    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビュアー</a> ／ <a
-      href="#IV">イメージビュアー</a><br>
+    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビューア</a> ／ <a
+      href="#IV">イメージビューア</a><br>
     　　<a href="hid00100.htm">→ アルファベット順索引</a> ／ 　<a href="hid00063.htm">→ ExeCommands コマンド</a>
   </p>
   <p>コマンドによっては、複数の項目に分類されている場合があります。</p>
@@ -71,7 +71,7 @@
     <a href="#f_Setup">設定</a> ／
     <a href="#f_Git">Git</a> ／
     <a href="#f_Other">その他</a> ／
-    <a href="#f_TV">テキストビュアー設定</a>
+    <a href="#f_TV">テキストビューア設定</a>
   </p>
 
   <table cellspacing="0">
@@ -342,8 +342,8 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ImageViewer">ImageViewer</a></td>
-      <td>イメージビュアーで開く</td>
-      <td><a href="hid00007.htm">→ イメージビュアー</a></td>
+      <td>イメージビューアで開く</td>
+      <td><a href="hid00007.htm">→ イメージビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#OpenADS">OpenADS</a></td>
@@ -387,18 +387,18 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#TextViewer">TextViewer</a></td>
-      <td>テキストビュアーで開く</td>
-      <td><a href="hid00006.htm">→ テキストビュアー</a></td>
+      <td>テキストビューアで開く</td>
+      <td><a href="hid00006.htm">→ テキストビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#SubViewer">SubViewer</a></td>
-      <td>サブビュアーの表示/非表示</td>
+      <td>サブビューアの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ViewTail">ViewTail</a></td>
       <td>テキストファイルの末尾を閲覧</td>
-      <td><a href="hid00006.htm">→ テキストビュアー</a></td>
+      <td><a href="hid00006.htm">→ テキストビューア</a></td>
     </tr>
 
     <tr id="f_Drive">
@@ -664,7 +664,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowTabBar">ShowTabBar</a></td>
-      <td>タブバーの表示/非表示</td>
+      <td>タブバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -1717,8 +1717,8 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#JsonViewer">JsonViewer</a></td>
-      <td>JSONビュアー</td>
-      <td><a href="hid00092.htm">→ JSONビュアー</a></td>
+      <td>JSONビューア</td>
+      <td><a href="hid00092.htm">→ JSONビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ListArchive">ListArchive</a></td>
@@ -1777,8 +1777,8 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#XmlViewer">XmlViewer</a></td>
-      <td>XMLビュアー</td>
-      <td><a href="hid00081.htm">→ XMLビュアー</a></td>
+      <td>XMLビューア</td>
+      <td><a href="hid00081.htm">→ XMLビューア</a></td>
     </tr>
 
     <tr id="f_Task">
@@ -1900,13 +1900,13 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ViewLog">ViewLog</a></td>
-      <td>ログをテキストビュアーで表示</td>
-      <td><a href="hid00006.htm">→ テキストビュアー</a></td>
+      <td>ログをテキストビューアで表示</td>
+      <td><a href="hid00006.htm">→ テキストビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ViewTail">ViewTail</a></td>
       <td>テキストファイルの末尾を閲覧</td>
-      <td><a href="hid00006.htm">→ テキストビュアー</a></td>
+      <td><a href="hid00006.htm">→ テキストビューア</a></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#WatchTail">WatchTail</a></td>
@@ -1974,7 +1974,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#MenuBar">MenuBar</a></td>
-      <td>メニューバーの表示/非表示</td>
+      <td>メニューバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2014,7 +2014,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowFKeyBar">ShowFKeyBar</a></td>
-      <td>ファンクションキーバーの表示/非表示</td>
+      <td>ファンクションキーバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2024,27 +2024,27 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowIcon">ShowIcon</a></td>
-      <td>アイコンの表示/非表示</td>
+      <td>アイコンの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowLogWin">ShowLogWin</a></td>
-      <td>ログウィンドウの表示/非表示</td>
+      <td>ログウィンドウの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowPreview">ShowPreview</a></td>
-      <td>プレビューの表示/非表示</td>
+      <td>プレビューの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowProperty">ShowProperty</a></td>
-      <td>ファイル情報の表示/非表示</td>
+      <td>ファイル情報の表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowStatusBar">ShowStatusBar</a></td>
-      <td>ステータスバーの表示/非表示</td>
+      <td>ステータスバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2157,7 +2157,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#GitViewer">GitViewer</a></td>
-      <td>Gitビュアー</td>
+      <td>Gitビューア</td>
       <td><a href="hid00090.htm">→ Git の利用について</a></td>
     </tr>
     <tr>
@@ -2286,7 +2286,7 @@
     </tr>
     <tr>
       <td><a href="hid00005.htm#ToExViewer">ToExViewer</a></td>
-      <td>別ウィンドウのテキストビュアーへ</td>
+      <td>別ウィンドウのテキストビューアへ</td>
       <td></td>
     </tr>
     <tr>
@@ -2316,62 +2316,67 @@
     </tr>
 
     <tr id="f_TV">
-      <td colspan="3"><br><b>テキストビュアー設定</b></td>
+      <td colspan="3"><br><b>テキストビューア設定</b></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#FixedLen">FixedLen</a></td>
-      <td>テキストビュアーでCSV/TSVを固定長表示</td>
+      <td>テキストビューアでCSV/TSVを固定長表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#HtmlToText">HtmlToText</a></td>
-      <td>テキストビュアーでHTML→テキスト変換表示</td>
+      <td>テキストビューアでHTML→テキスト変換表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetColor">SetColor</a></td>
-      <td>テキストビュアーの配色</td>
+      <td>テキストビューアの配色</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetMargin">SetMargin</a></td>
-      <td>テキストビュアーの左側余白を設定</td>
+      <td>テキストビューアの左側余白を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetTab">SetTab</a></td>
-      <td>テキストビュアーのタブストップ幅を設定</td>
+      <td>テキストビューアのタブストップ幅を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#SetWidth">SetWidth</a></td>
-      <td>テキストビュアーの折り返し幅を設定</td>
+      <td>テキストビューアの折り返し幅を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowCR">ShowCR</a></td>
-      <td>テキストビュアーで改行を表示/非表示</td>
-      <td>※TV</td>
+      <td>テキストビューアで改行を表示</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><a href="hid00005.htm#ShowIndent">ShowIndent</a></td>
+      <td>テキストビューアのインデントガイドを表示</td>
+      <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowLineNo">ShowLineNo</a></td>
-      <td>テキストビュアーの行番号を表示/非表示</td>
+      <td>テキストビューアの行番号を表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowRuby">ShowRuby</a></td>
-      <td>テキストビュアーでルビを表示/非表示</td>
+      <td>テキストビューアでルビを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowRuler">ShowRuler</a></td>
-      <td>テキストビュアーのルーラを表示/非表示</td>
+      <td>テキストビューアのルーラを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00005.htm#ShowTAB">ShowTAB</a></td>
-      <td>テキストビュアーでタブを表示/非表示</td>
-      <td>※TV</td>
+      <td>テキストビューアでタブを表示</td>
+      <td></td>
     </tr>
 
     <tr id="IS">
@@ -2456,9 +2461,9 @@
   </table>
   <br>
 
-  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#IV">イメージビュアー</a></p><br>
+  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#IV">イメージビューア</a></p><br>
 
-  <h2 id="TV">テキストビュアー</h2>
+  <h2 id="TV">テキストビューア</h2>
   <p class="link_box">
     <a href="#v_Cursor">カーソル移動</a> ／
     <a href="#v_Scroll">スクロール</a> ／
@@ -2833,7 +2838,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#BackViewHist">BackViewHist</a></td>
-      <td>テキストビュアーの履歴を戻る</td>
+      <td>テキストビューアの履歴を戻る</td>
       <td></td>
     </tr>
     <tr>
@@ -2868,12 +2873,12 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#TagView">TagView</a></td>
-      <td>ビュアーでタグジャンプ</td>
+      <td>ビューアでタグジャンプ</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#TagViewDirect">TagViewDirect</a></td>
-      <td>ビュアーでダイレクトタグジャンプ</td>
+      <td>ビューアでダイレクトタグジャンプ</td>
       <td><a href="hid00083.htm">→ ダイレクトタグジャンプ</a></td>
     </tr>
 
@@ -2979,7 +2984,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#CharInfo">CharInfo</a></td>
-      <td>文字情報の表示/非表示</td>
+      <td>文字情報の表示</td>
       <td></td>
     </tr>
     <tr>
@@ -2999,7 +3004,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#CsvRecord">CsvRecord</a></td>
-      <td>CSV/TSVレコードの表示/非表示</td>
+      <td>CSV/TSVレコードの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3028,7 +3033,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#BitmapView">BitmapView</a></td>
-      <td>ビットマップビューの表示/非表示</td>
+      <td>ビットマップビューの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3038,7 +3043,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#Inspector">Inspector</a></td>
-      <td>インスペクタの表示/非表示</td>
+      <td>インスペクタの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3111,7 +3116,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#FixedLen">FixedLen</a></td>
-      <td>テキストビュアーでCSV/TSVを固定長表示</td>
+      <td>テキストビューアでCSV/TSVを固定長表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3121,7 +3126,7 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#HtmlToText">HtmlToText</a></td>
-      <td>テキストビュアーでHTML→テキスト変換表示</td>
+      <td>テキストビューアでHTML→テキスト変換表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3131,12 +3136,12 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#MenuBar">MenuBar</a></td>
-      <td>メニューバーの表示/非表示</td>
+      <td>メニューバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetColor">SetColor</a></td>
-      <td>テキストビュアーの配色</td>
+      <td>テキストビューアの配色</td>
       <td></td>
     </tr>
     <tr>
@@ -3146,53 +3151,58 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetMargin">SetMargin</a></td>
-      <td>テキストビュアーの左側余白を設定</td>
+      <td>テキストビューアの左側余白を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetTab">SetTab</a></td>
-      <td>テキストビュアーのタブストップ幅を設定</td>
+      <td>テキストビューアのタブストップ幅を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#SetWidth">SetWidth</a></td>
-      <td>テキストビュアーの折り返し幅を設定</td>
+      <td>テキストビューアの折り返し幅を設定</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowCR">ShowCR</a></td>
-      <td>テキストビュアーで改行を表示/非表示</td>
-      <td>※TV</td>
+      <td>テキストビューアで改行を表示</td>
+      <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowFKeyBar">ShowFKeyBar</a></td>
-      <td>ファンクションキーバーの表示/非表示</td>
+      <td>ファンクションキーバーの表示</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><a href="hid00006.htm#ShowIndent">ShowIndent</a></td>
+      <td>テキストビューアのインデントガイドを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowLineNo">ShowLineNo</a></td>
-      <td>テキストビュアーの行番号を表示/非表示</td>
+      <td>テキストビューアの行番号を表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowRuby">ShowRuby</a></td>
-      <td>テキストビュアーでルビを表示/非表示</td>
+      <td>テキストビューアでルビを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowRuler">ShowRuler</a></td>
-      <td>テキストビュアーのルーラを表示/非表示</td>
+      <td>テキストビューアのルーラを表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowStatusBar">ShowStatusBar</a></td>
-      <td>ステータスバーの表示/非表示</td>
+      <td>ステータスバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowTAB">ShowTAB</a></td>
-      <td>テキストビュアーでタブを表示/非表示</td>
-      <td>※TV</td>
+      <td>テキストビューアでタブを表示</td>
+      <td></td>
     </tr>
     <tr>
       <td><a href="hid00006.htm#ShowToolBar">ShowToolBar</a></td>
@@ -3356,9 +3366,9 @@
   </table>
   <br>
 
-  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビュアー</a></p><br>
+  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビューア</a></p><br>
 
-  <h2 id="IV">イメージビュアー</h2>
+  <h2 id="IV">イメージビューア</h2>
   <p class="link_box">
     <a href="#i_Move">移動</a> ／
     <a href="#i_Select">選択</a> ／
@@ -3438,7 +3448,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowSeekBar">ShowSeekBar</a></td>
-      <td>シークバーの表示/非表示</td>
+      <td>シークバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3734,7 +3744,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#SubViewer">SubViewer</a></td>
-      <td>サブビュアーの表示/非表示</td>
+      <td>サブビューアの表示</td>
       <td></td>
     </tr>
 
@@ -3753,7 +3763,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Histogram">Histogram</a></td>
-      <td>ヒストグラムの表示/非表示</td>
+      <td>ヒストグラムの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3763,7 +3773,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Loupe">Loupe</a></td>
-      <td>ルーペの表示/非表示</td>
+      <td>ルーペの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3778,7 +3788,7 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Sidebar">Sidebar</a></td>
-      <td>サイドバーの表示/非表示</td>
+      <td>サイドバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3827,12 +3837,12 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Loupe">Loupe</a></td>
-      <td>ルーペの表示/非表示</td>
+      <td>ルーペの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#MenuBar">MenuBar</a></td>
-      <td>メニューバーの表示/非表示</td>
+      <td>メニューバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3847,22 +3857,22 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowFKeyBar">ShowFKeyBar</a></td>
-      <td>ファンクションキーバーの表示/非表示</td>
+      <td>ファンクションキーバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowGrid">ShowGrid</a></td>
-      <td>画像分割グリッドの表示/非表示</td>
+      <td>画像分割グリッドの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowSeekBar">ShowSeekBar</a></td>
-      <td>シークバーの表示/非表示</td>
+      <td>シークバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#ShowStatusBar">ShowStatusBar</a></td>
-      <td>ステータスバーの表示/非表示</td>
+      <td>ステータスバーの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -3872,12 +3882,12 @@
     </tr>
     <tr>
       <td><a href="hid00007.htm#Sidebar">Sidebar</a></td>
-      <td>サイドバーの表示/非表示</td>
+      <td>サイドバーの表示</td>
       <td></td>
     </tr>
     <tr>
       <td><a href="hid00007.htm#Thumbnail">Thumbnail</a></td>
-      <td>サムネイルの表示/非表示</td>
+      <td>サムネイルの表示</td>
       <td></td>
     </tr>
     <tr>
@@ -4016,7 +4026,7 @@
 
   </table>
 
-  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビュアー</a> ／ <a href="#IV">イメージビュアー</a></p>
+  <p class="link_box"><a href="#FL">ファイラー</a> ／ <a href="#TV">テキストビューア</a> ／ <a href="#IV">イメージビューア</a></p>
   <br><br><br><br><br><br><br><br>
 
 </body>
